grammar.js
    source_file: ($) =>
      seq(optional($.module_declaration), repeat($._top_level_item)),

    // -----------------------------------------------------------------------
    // Comments
    // -----------------------------------------------------------------------

    comment: (_) => token(seq("--", /[^\n]*/)),

    // -----------------------------------------------------------------------
    // Primitives
    // -----------------------------------------------------------------------

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(/[^"\\{\n]+/),
            $.escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"',
      ),

    duration_literal: (_) =>
      token(/\d+(\.\d+)?\.(seconds?|minutes?|hours?|days?|weeks?|months?|years?)/),

    number_literal: (_) => /\d+(\.\d+)?/,

    boolean_literal: (_) => choice("true", "false"),

    null_literal: (_) => "null",

    // -----------------------------------------------------------------------
    // Module header
    // -----------------------------------------------------------------------

    module_declaration: ($) => seq("module", field("name", $.identifier)),

    // -----------------------------------------------------------------------
    // Top-level declarations
    // -----------------------------------------------------------------------

    _top_level_item: ($) =>
      choice(
        $.use_declaration,
        $.rule_declaration,
        $.entity_declaration,
        $.external_entity_declaration,
        $.value_declaration,
        $.enum_declaration,
        $.given_block,
        $.config_block,
        $.surface_declaration,
        $.actor_declaration,
        $.default_declaration,
        $.variant_declaration,
        $.deferred_declaration,
        $.contract_declaration,
        $.invariant_declaration,
      ),

    use_declaration: ($) =>
      seq(
        "use",
        field("path", $.string_literal),
        optional(seq("as", field("alias", $.identifier))),
      ),

    rule_declaration: ($) =>
      seq("rule", field("name", $.identifier), field("body", $.block_body)),

    entity_declaration: ($) =>
      seq("entity", field("name", $.identifier), field("body", $.block_body)),

    external_entity_declaration: ($) =>
      seq(
        "external",
        "entity",
        field("name", $.identifier),
        field("body", $.block_body),
      ),

    value_declaration: ($) =>
      seq("value", field("name", $.identifier), field("body", $.block_body)),

    enum_declaration: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        field("body", choice($.block_body, $.enum_body)),
      ),

    // Enum body: pipe-separated or comma-separated values without key: value
    enum_body: ($) =>
      seq("{", field("values", choice($._expression, $.tuple_expression)), "}"),

    given_block: ($) => seq("given", field("body", $.block_body)),

    config_block: ($) => seq("config", field("body", $.block_body)),

    surface_declaration: ($) =>
      seq("surface", field("name", $.identifier), field("body", $.block_body)),

    actor_declaration: ($) =>
      seq("actor", field("name", $.identifier), field("body", $.block_body)),

    // "default [TypeName] instanceName = expression"
    default_declaration: ($) =>
      seq(
        "default",
        optional(field("type", $.identifier)),
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    // "variant Name: sum_type_expression"
    variant_declaration: ($) =>
      seq(
        "variant",
        field("name", $.identifier),
        ":",
        field("type", $._expression),
      ),

    // "deferred Name.field" / "deferred alias/Name.field", optionally
    // followed by a quoted location hint. The path is a dotted name with an
    // optional use-alias qualifier, not a general expression — mirroring the
    // reference parser (juxt/allium-tools#24).
    deferred_declaration: ($) =>
      seq(
        "deferred",
        field("path", $.deferred_path),
        optional(field("hint", $.string_literal)),
      ),

    deferred_path: ($) =>
      seq(
        $.identifier,
        optional(seq("/", $.identifier)),
        repeat(seq(".", $.identifier)),
      ),

    // "contract Name { ... }"
    contract_declaration: ($) =>
      seq("contract", field("name", $.identifier), field("body", $.block_body)),

    // "invariant Name { expr }" — expression-bearing invariant
    invariant_declaration: ($) =>
      seq("invariant", field("name", $.identifier), "{", field("body", $._expression), "}"),

    // -----------------------------------------------------------------------
    // Block body
    // -----------------------------------------------------------------------

    block_body: ($) => seq("{", repeat(seq($._block_item, optional(","))), "}"),

    _block_item: ($) =>
      choice(
        $.clause,
        $.field_assignment,
        $.let_binding,
        $.open_question,
        $.annotation,
        $.transition_block,
        $.for_block,
        $.if_block,
        $.invariant_block,
      ),

    // Clause: reserved keyword followed by colon and an expression
    clause: ($) =>
      seq(
        field("keyword", $.clause_keyword),
        ":",
        field("value", choice($._expression, $.tuple_expression)),
      ),

    // Clause keywords are reserved — the `word` rule ensures they cannot be
    // matched as plain identifiers.
    clause_keyword: (_) =>
      choice(
        "when",
        "requires",
        "ensures",
        "trigger",
        "provides",
        "tags",
        "guidance",
        "invariant",
        "becomes",
        "related",
        "exposes",
        "identified_by",
        "facing",
        "transitions_to",
        "guarantee",
        "timeout",
        "within",
        "contracts",
        "context",
      ),

    // Field assignment: plain identifier followed by colon and an expression
    field_assignment: ($) =>
      seq(
        field("key", $.identifier),
        ":",
        field("value", $._expression),
      ),

    // Let binding: "let name = expression"
    let_binding: ($) =>
      seq(
        "let",
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    // open_question: 'open question "..."' marker
    open_question: ($) =>
      seq("open", "question", field("text", $.string_literal)),

    // Annotation: @invariant Name, @guidance, @guarantee Name
    annotation: ($) =>
      seq("@", field("kind", $.annotation_keyword), optional(field("name", $.identifier))),

    annotation_keyword: (_) => choice("invariant", "guidance", "guarantee"),

    // -----------------------------------------------------------------------
    // Transition graphs (v3)
    // -----------------------------------------------------------------------

    // "transitions field_name { edge... terminal: states }"
    _expression: ($) =>
      choice(
        $.for_expression,
        $.if_expression,
        $.when_expression,
        $.lambda_expression,
        $.thin_arrow_expression,
        $.implies_expression,
        $.or_expression,
        $.null_coalescing_expression,
        $.and_expression,
        $.not_expression,
        $.exists_expression,
        $.where_expression,
        $.with_expression,
        $.in_expression,
        $.not_in_expression,
        $.comparison_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.infix_predicate_expression,
        $.pipe_expression,
        $.call_expression,
        $.member_expression,
        $.optional_member_expression,
        $.string_literal,
        $.duration_literal,
        $.number_literal,
        $.boolean_literal,
        $.null_literal,
        $.backtick_literal,
        $.set_literal,
        $.identifier,
        $.block_expression,
      ),

    block_expression: ($) => $.block_body,

    tuple_expression: ($) =>
      prec.left(
        PREC.COMMA,
        seq(
          field("left", choice($._expression, $.tuple_expression)),
          ",",
          field("right", choice($._expression, $.tuple_expression)),
        ),
      ),

    // For expression: "for binding in collection: expr"
    // When "where" is used, it parses as a where_expression on the collection.
    or_expression: ($) =>
      prec.left(
        PREC.OR,
        seq(
          field("left", $._expression),
          "or",
          field("right", $._expression),
        ),
      ),

    // Boolean AND
    and_expression: ($) =>
      prec.left(
        PREC.AND,
        seq(
          field("left", $._expression),
          "and",
          field("right", $._expression),
        ),
      ),

    // Unary NOT
    comparison_expression: ($) =>
      prec.left(
        PREC.COMPARE,
        seq(
          field("left", $._expression),
          field("operator", choice("=", "==", "!=", "<", ">", "<=", ">=")),
          field("right", $._expression),
        ),
      ),

    infix_predicate_expression: ($) =>
      prec.left(
        PREC.INFIX,
        seq(
          field("subject", $._expression),
          field("predicate", $.identifier),
        ),
      ),

    // Pipe / sum-type: "a | b | c"
    pipe_expression: ($) =>
      prec.left(
        PREC.PIPE,
        seq(
          field("left", $._expression),
          "|",
          field("right", $._expression),
        ),
      ),

    // Function / method call: "Name(...)" or "a.Name(...)"
    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          "(",
          optional(field("arguments", $.argument_list)),
          ")",
        ),
      ),

    argument_list: ($) =>
      seq(
        $._argument,
        repeat(seq(optional(","), $._argument)),
      ),

    _argument: ($) =>
      choice(
        $.named_argument,
        $._expression,
      ),

    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("object", $._expression),
          ".",
          field("property", $.identifier),
        ),
      ),

    // Optional member / dot access: "a?.b"
