test/corpus/clauses.txt
==================
All Clause Types
==================
rule AllClauses {
  when: event
  requires: pre_condition
  ensures: post_condition
  trigger: start
  provides: capability
  tags: "tag1", "tag2"
  guidance: "help"
  invariant: prop == true
  becomes: new_state
  related: other_entity
  exposes: internal_val
  identified_by: id_field
  facing: actor_name
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (tuple_expression
          left: (string_literal)
          right: (string_literal)))
      (clause
        keyword: (clause_keyword)
        value: (string_literal))
      (clause
        keyword: (clause_keyword)
        value: (comparison_expression
          left: (identifier)
          right: (boolean_literal)))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Contracts Clause
==================
surface API {
  contracts: demands PaymentTerms, fulfils DeliveryGuarantee
}

---

(source_file
  (surface_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (tuple_expression
          left: (infix_predicate_expression
            subject: (identifier)
            predicate: (identifier))
          right: (infix_predicate_expression
            subject: (identifier)
            predicate: (identifier)))))))

==================
Tuple Expressions in Ensures Clause
==================
rule Validation {
  ensures: count > 0, total = sum
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (tuple_expression
          left: (comparison_expression
            left: (identifier)
            right: (number_literal))
          right: (comparison_expression
            left: (identifier)
            right: (identifier)))))))

==================
Multiple Provides Clauses
==================
surface API {
  provides: auth_token
  provides: session_id
}

---

(source_file
  (surface_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Transitions_to and Becomes Clauses
==================
rule ShipOrder {
  transitions_to: shipped
  becomes: fulfilled
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Within and Timeout Clauses
==================
rule Payment {
  within: 30.minutes
  timeout: 1.hours
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (duration_literal))
      (clause
        keyword: (clause_keyword)
        value: (duration_literal)))))

==================
Guarantee Clause
==================
rule SLA {
  guarantee: response_time < 200
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (comparison_expression
          left: (identifier)
          right: (number_literal))))))

==================
Annotations
==================
entity Account {
  balance: Decimal
  @invariant PositiveBalance
  @guidance
  @guarantee Uptime
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (annotation
        kind: (annotation_keyword)
        name: (identifier))
      (annotation
        kind: (annotation_keyword))
      (annotation
        kind: (annotation_keyword)
        name: (identifier)))))

==================
Let Binding Inside a Block
==================
rule r {
  let x = 5
  trigger: active
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (let_binding
        name: (identifier)
        value: (number_literal))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Open Question Inside a Block
==================
rule r {
  trigger: active
  open question "Is this the right approach?"
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))
      (open_question
        text: (string_literal)))))

==================
Mixed Clauses and Field Assignments in One Block
==================
rule r {
  let x = 5
  open question "Should this be configurable?"
  trigger: active
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (let_binding
        name: (identifier)
        value: (number_literal))
      (open_question
        text: (string_literal))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Multi-Line Boolean Continuation
==================
rule R {
  requires: a
    or b
  ensures: done
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (or_expression
          left: (identifier)
          right: (identifier)))
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Multi-Line And Continuation Across Comment
==================
rule R {
  requires: a -- first operand
    and b
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (and_expression
          left: (identifier)
          (comment)
          right: (identifier))))))
