test/corpus/declarations.txt
==================
Module
==================
module my_module

---

(source_file
  (module_declaration
    name: (identifier)))

==================
Imports
==================
use "std/base"
use "auth" as identity

---

(source_file
  (use_declaration
    path: (string_literal))
  (use_declaration
    path: (string_literal)
    alias: (identifier)))

==================
Rule Declaration
==================
rule my_rule {
  trigger: active
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Entity and External Entity
==================
entity User {
  id: string
}

external entity Database {
  connection: string
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))))
  (external_entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Value and Enum
==================
value config_val {
  key: "value"
}

enum Status {
  active: "Active"
}

---

(source_file
  (value_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal))))
  (enum_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal)))))

==================
Given and Config
==================
given {
  user: current_user
}

config {
  retries: 3
}

---

(source_file
  (given_block
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))))
  (config_block
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (number_literal)))))

==================
Surface and Actor
==================
surface API {
  base_url: "https://api.example.com"
}

actor Bot {
  type: "worker"
}

---

(source_file
  (surface_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal))))
  (actor_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal)))))

==================
Default and Variant
==================
default my_instance = {}
default Type named_instance = 123
variant Color: red | blue | green

---

(source_file
  (default_declaration
    name: (identifier)
    value: (block_expression
      (block_body)))
  (default_declaration
    type: (identifier)
    name: (identifier)
    value: (number_literal))
  (variant_declaration
    name: (identifier)
    type: (pipe_expression
      left: (pipe_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

==================
Contract Declaration
==================
contract PaymentTerms {
  amount: Decimal,
  currency: String
}

---

(source_file
  (contract_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Invariant Declaration
==================
invariant PositiveBalance {
  account.balance > 0
}

---

(source_file
  (invariant_declaration
    name: (identifier)
    body: (comparison_expression
      left: (member_expression
        object: (identifier)
        property: (identifier))
      right: (number_literal))))

==================
Deferred Declaration with Dotted Path
==================
deferred Order.fraud_check

---

(source_file
  (deferred_declaration
    path: (deferred_path
      (identifier)
      (identifier))))

==================
Deferred Declaration with Qualified Path
==================
deferred billing/InvoiceWorkflow.initiate

---

(source_file
  (deferred_declaration
    path: (deferred_path
      (identifier)
      (identifier)
      (identifier))))

==================
Deferred Declaration with Quoted Location Hint
==================
deferred SlotRecovery.initiate "detailed/slot-recovery.allium"

---

(source_file
  (deferred_declaration
    path: (deferred_path
      (identifier)
      (identifier))
    hint: (string_literal)))

==================
Deferred Declaration Rejects Expression-Shaped Paths
:error
==================
deferred Foo("x")

---

==================
Open Question Declaration
==================
rule Review {
  open question "How do we handle refunds?"
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (open_question
        text: (string_literal)))))

==================
Top-Level Open Question Declaration
==================
open question "Admin ownership - should admins be assigned to specific roles?"

---

(source_file
  (open_question
    text: (string_literal)))

==================
Empty Block Bodies
==================
entity Empty {}

rule Empty {}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body))
  (rule_declaration
    name: (identifier)
    body: (block_body)))

==================
Enum with Pipe-Separated Body
==================
enum Status { active | inactive }

---

(source_file
  (enum_declaration
    name: (identifier)
    body: (enum_body
      values: (pipe_expression
        left: (identifier)
        right: (identifier)))))

==================
Comma-separated Entity Fields
==================
entity Item {
  name: String,
  price: Decimal,
  active: Boolean
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Module with Declarations
==================
module core
rule r {
  trigger: active
}
entity e {
  name: String
}

---

(source_file
  (module_declaration
    name: (identifier))
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier))))
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Use with Alias
==================
use "auth/tokens" as tokens

---

(source_file
  (use_declaration
    path: (string_literal)
    alias: (identifier)))

==================
Multiple Use Declarations
==================
use "std/base"
use "auth/tokens" as tokens
use "payments"

---

(source_file
  (use_declaration
    path: (string_literal))
  (use_declaration
    path: (string_literal)
    alias: (identifier))
  (use_declaration
    path: (string_literal)))

==================
Variant with Complex Sum Type
==================
variant Status: active | inactive | pending

---

(source_file
  (variant_declaration
    name: (identifier)
    type: (pipe_expression
      left: (pipe_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

==================
Default with Block Expression Value
==================
default timeout = { retries: 3, delay: 1.seconds }

---

(source_file
  (default_declaration
    name: (identifier)
    value: (block_expression
      (block_body
        (field_assignment
          key: (identifier)
          value: (number_literal))
        (field_assignment
          key: (identifier)
          value: (duration_literal))))))

==================
Entity with Mixed Field Assignments and Clauses
==================
entity Order {
  name: String,
  price: Decimal,
  requires: name = null
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier))
      (clause
        keyword: (clause_keyword)
        value: (comparison_expression
          left: (identifier)
          right: (null_literal))))))

==================
Contract with Typed Fields
==================
contract Delivery {
  deadline: Duration,
  priority: Integer
}

---

(source_file
  (contract_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Entity with Newline-Separated Fields
==================
entity Foo {
  bar: String
  baz: String
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Newline-Separated Fields with Trailing Comments
==================
entity Foo {
  bar: String -- no comma
  baz: String -- still highlighted
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (comment)
      (field_assignment
        key: (identifier)
        value: (identifier))
      (comment))))

==================
Mixed Comma and Newline Separators
==================
entity F {
  a: X, b: Y
  c: Z
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Default with List Literal
==================
default clause_order = ["a", "b"]
---

(source_file
  (default_declaration
    name: (identifier)
    value: (list_literal
      (string_literal)
      (string_literal))))

==================
Default with Empty List Literal
==================
default x = []
---

(source_file
  (default_declaration
    name: (identifier)
    value: (list_literal)))

==================
Default with List of Object Literals
==================
default z = [{a: 1}, {a: 2}]
---

(source_file
  (default_declaration
    name: (identifier)
    value: (list_literal
      (block_expression
        (block_body
          (field_assignment
            key: (identifier)
            value: (number_literal))))
      (block_expression
        (block_body
          (field_assignment
            key: (identifier)
            value: (number_literal)))))))

==================
Default with Qualified Type
==================
default gp/Policy my_policy = { retries: 3 }
---

(source_file
  (default_declaration
    alias: (identifier)
    type: (identifier)
    name: (identifier)
    value: (block_expression
      (block_body
        (field_assignment
          key: (identifier)
          value: (number_literal))))))
